# D2D

./: .gitignore
destination2development-backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
destination2development-backend/alembic/: env.py
destination2development-backend/alembic/versions/: 0bcc5f637a7c_migration_description.py  7c5064d03270_migration_description.py  b72d61a5e2e6_initial_schema.py  d0c9b79df80e_initial_schema.py  d1307fba246e_migration_description.py
destination2development-backend/app/: main.py
destination2development-backend/app/assistant/: model_helper.py
destination2development-backend/app/core/: config.py  database.py  dependencies.py  events.py
destination2development-backend/app/data_seeds/: languages.py
destination2development-backend/app/endpoints/: document_access_request.py  documents_access_request.py  language.py  languages.py  message.py  message_thread.py  message_thread_participant.py  message_thread_participants.py  message_threads.py  messages.py  notification.py  notifications.py  profile.py  profile_document.py  profile_documents.py  profile_language.py  profile_languages.py  profiles.py  support_ticket.py  user.py  users.py  users_unlock_request.py
destination2development-backend/app/handler/: notification.py
destination2development-backend/app/jobs/: delete_scheduled_users.py
destination2development-backend/app/models/: __init__.py  business.py  business_user.py  course.py  course_category.py  course_enrollment.py  (+20 more)
destination2development-backend/tests/: conftest.py
(+58 files in other folders)
