[project]
name = "destination2development-backend"
version = "0.1.0"
description = "Destination 2 Development Backend"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "pydantic-settings",
    "requests",
    "pydantic[email]>=2.13.4",
    "auth0-fastapi-api>=1.0.0b7",
    "starlette>=1.3.1",
    "httpx>=0.28.1",
    "auth0-api-python>=1.0.0b9",
    "authlib<1.7",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
